compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__discard_6.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub record Thing {\n  Thing(a: Bool, b: Bool)\n}\n\npub fn main(x) {\n  case x {\n    Thing(False, ..) -> 1\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:7:3
  │  
7 │ ╭   case x {
8 │ │     Thing(False, ..) -> 1
9 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Thing(True, _)
