compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__empty_case_of_bool.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 1138
expression: "\nlet b = True\ncase b {}\n"
---
----- SOURCE CODE

let b = True
case b {}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:1
  │
3 │ case b {}
  │ ^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    False
    True
